# Yu_XLSX

./: .gitignore  CMakeLists.txt
doc/: find_result.xlsx  todo.md  想法.txt  揭阳2.xlsx  福邦1.xlsx  福邦2-4交易详情135.xlsx
doc/0110/: result林鑫102.xlsx  林鑫12月新表.xlsx  林鑫4-6交易详情102.xlsx
doc/new/: 揭阳2.xlsx  揭阳bp11-13交易详情134.xlsx  揭阳bp14-16交易详情123.xlsx  福众14-16交易详情131.xlsx  福众3.xlsx  福众bp11-13交易详情118.xlsx  福邦1.xlsx  福邦14-16交易详情255.xlsx  福邦bp11-13交易详情208.xlsx
src/: excel_finder_controller.cpp  excel_finder_controller.h  main.cpp
src/configfile/: CMakeLists.txt  config_file.h  filepath_config.cpp  filepath_config.h  filepath_config_async.h  output_config.cpp  output_config.h
src/excel_finder/: CMakeLists.txt  excel_finder.cpp  excel_finder.h
src/ui/: CMakeLists.txt  Main.qml  finder_worker.cpp  finder_worker.h  main_window.cpp  main_window.h  main_window.ui  qml.qrc  ui_main.qml
src/ui/component/: SideBar.qml
src/ui/page/: ConfigPage.qml  HomePage.qml
src/utils/: CMakeLists.txt  time_utils.cpp  time_utils.h
src/xlsx_handle/: CMakeLists.txt  xlsx_handle.cpp  xlsx_handle.h
